packages/frontend/src/app.scss
@import './static/themes/purpura.scss';

// font
@import './static/fonts/figtree.scss';
@import './static/fonts/inclusivesans.scss';

:global(body) {
	margin: 0px;
	background-color: var(--bg-primary);
	color: var(--txt-secondary);
	font-family: var(--font);
}

:global(h1) {
	margin: 0px;
}

:global(h2) {
	margin: 0px;
}

:global(h3) {
	margin: 0px;
}

:global(h4) {
	margin: 0px;
}

:global(h5) {
	margin: 0px;
}

:global(h6) {
	margin: 0px;
}

:global(a) {
	color: var(--accent);
}

:global(p) {
	margin: 0px;
}

.page {
	display: flex;
	align-items: center;
	justify-content: center;
}

main {
	max-width: 1024px;
	width: 550px;
	min-width: 250px;

	height: 100vh;

	border-left: 1px solid var(--bg-tertiary);
	border-right: 1px solid var(--bg-tertiary);
}

@media screen and (max-width: 650px) {
	main {
		width: 100%;
		height: 100vh;
	}
}

:global(.paddedPage) {
	padding: 12px 16px;
}

:global(::selection) {
	background-color: var(--accent);
	color: var(--bg-primary);
}

:global(.btn) {
	cursor: pointer;
	user-select: none;
	display: inline-block;
	background-color: var(--bg-tertiary);
	color: var(--txt-secondary);
	font-size: 15px;
	text-decoration: none;
	padding: 8px 14px;
	margin: 4px;
	border-radius: 8px;
	border: none;
	font-family: inherit;

	outline: 2px var(--accent);
	outline-offset: 1px;

	&.header {
		border: none;
		background-color: transparent;
		padding: 0px;
		margin: 0px;
		margin-right: 5px;
	}
}

:global(.ipt) {
	display: inline-block;
	background-color: var(--bg-secondary);
	color: var(--txt-secondary);
	font-size: 15px;
	padding: 8px 14px;
	margin: 4px;
	border-radius: 8px;
	border: none;
	font-family: inherit;
	width: 250px;

	outline: 2px var(--accent);
	outline-offset: 1px;
}

:global(a.subtle) {
	display: inherit;
	text-decoration: none;
	color: inherit;
	font-weight: inherit;
	font-size: inherit;
}

